end of the project

--- a/index.html
+++ b/index.html
@@ -7,11 +7,44 @@
   <title>Key Combo Navbar</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-  <nav class="navbar"></nav>
-  <p>Press Ctrl/Cmd + M</p>
+  <nav class="navbar nav1"></nav>
+  <nav class="navbar nav2">
+    <ul class="navlist">
+      <li><a href="#"><i class='bx bxs-home'></i>
+          <p>Home</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-cog'></i>
+          <p>Settings</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-star'></i>
+          <p>Saved</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-bookmark'></i>
+          <p>Bookmark</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-cart'></i>
+          <p>Cart</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-user'></i>
+          <p>Account</p>
+        </a></li>
+      <li><a href="#"><i class='bx bxs-log-out'></i>
+          <p>Log-out</p>
+        </a></li>
+    </ul>
+  </nav>
+  <nav class="navbar nav3"></nav>
+  <nav class="navbar nav4"></nav>
+  <div>
+    <p>Press N for left sidebar</p>
+    <p>Press Ctrl/Cmd + M for right sidebar</p>
+    <p>Press T for top sidebar</p>
+    <p>Press Ctrl/Cmd + S for bottom sidebar</p>
+  </div>
 </body>
 
 </html>
